// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiSuggestItem is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiSuggestItem testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    class="ouiSuggestItem__type ouiSuggestItem__type--tint1"
  >
    <span
      color="inherit"
      data-ouiicon-type="search"
    />
  </span>
  <span
    class="ouiSuggestItem__label ouiSuggestItem__labelDisplay--expand ouiSuggestItem__label--width50"
  >
    Test label
  </span>
</div>
`;

exports[`props descriptionDisplay as wrap is rendered 1`] = `
<div
  class="ouiSuggestItem"
>
  <span
    class="ouiSuggestItem__type ouiSuggestItem__type--tint2"
  >
    <span
      color="inherit"
      data-ouiicon-type="kqlValue"
    />
  </span>
  <span
    class="ouiSuggestItem__label ouiSuggestItem__labelDisplay--fixed ouiSuggestItem__label--width50"
  >
    This is the description
  </span>
  <span
    class="ouiSuggestItem__description ouiSuggestItem__description--wrap"
  >
    This is the description
  </span>
</div>
`;

exports[`props item with no description has expanded label is rendered 1`] = `
<div
  class="ouiSuggestItem"
>
  <span
    class="ouiSuggestItem__type ouiSuggestItem__type--tint2"
  >
    <span
      color="inherit"
      data-ouiicon-type="kqlValue"
    />
  </span>
  <span
    class="ouiSuggestItem__label ouiSuggestItem__labelDisplay--expand ouiSuggestItem__label--width50"
  >
    Charles de Gaulle International Airport
  </span>
</div>
`;

exports[`props labelDisplay as expand is rendered 1`] = `
<div
  class="ouiSuggestItem"
>
  <span
    class="ouiSuggestItem__type ouiSuggestItem__type--tint2"
  >
    <span
      color="inherit"
      data-ouiicon-type="kqlValue"
    />
  </span>
  <span
    class="ouiSuggestItem__label ouiSuggestItem__labelDisplay--expand"
  >
    This is the description
  </span>
  <span
    class="ouiSuggestItem__description ouiSuggestItem__description--truncate"
  >
    This is the description
  </span>
</div>
`;

exports[`props labelWidth is 30% is rendered 1`] = `
<div
  class="ouiSuggestItem"
>
  <span
    class="ouiSuggestItem__type ouiSuggestItem__type--tint2"
  >
    <span
      color="inherit"
      data-ouiicon-type="kqlValue"
    />
  </span>
  <span
    class="ouiSuggestItem__label ouiSuggestItem__labelDisplay--fixed ouiSuggestItem__label--width30"
  >
    This is the description
  </span>
  <span
    class="ouiSuggestItem__description ouiSuggestItem__description--truncate"
  >
    This is the description
  </span>
</div>
`;
